[package]
name = "arandu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
dotenv = "0.15.0"
thiserror = "1.0.37"
ureq = { version = "2.5.0", features = ["json", "charset"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
